[IMP] project_timesheet_category: Updated documentation page

--- a/project_timesheet_category/static/description/index.html
+++ b/project_timesheet_category/static/description/index.html
@@ -1,8 +1,7 @@
 <section class="oe_container">
     <div class="oe_row oe_spaced">
         <div class="oe_picture" style="max-height: initial;">
-            <h2 class="oe_slogan">Project Key</h2>
-            <h4 class="oe_slogan">Project Agile Timesheet Category</h4>
+            <h2 class="oe_slogan">Project Timesheet Category</h2>
             <p class="text-center">
                 This module extends timesheet with category field.
             </p>
